Removed api old files and desing changes

--- a/web/client/app/common/navbar/navbar.html
+++ b/web/client/app/common/navbar/navbar.html
@@ -11,7 +11,7 @@
       <md-button ui-sref="efficiency" ui-sref-active="{'active-controller': 'controller','active':'efficiency','active-gateway':'gateway'}">
         <a class="sidebar-font" layout="column" layout-align="center center">
           <span class="icon icon-list-menu"></span>
-          <span>Efficiency</span>
+          <span>Truck Level</span>
         </a>
       </md-button>
 
