style changes and filter bar.

--- a/web/client/app/common/header/header.html
+++ b/web/client/app/common/header/header.html
@@ -1,4 +1,4 @@
-<md-toolbar class="parker-yellow parkerTopBar">
+<md-toolbar class="parker-yellow parkerTopBar header-gradient">
   <div class="md-toolbar-tools" layout="row" layout-align="space-between center" layout-fill>
     <div flex>
       <md-button ng-if="!vm.$mdSidenav('left').isOpen() || !vm.$mdSidenav('left').isLockedOpen()"
