Changes in the design

--- a/web/client/app/common/header/header.html
+++ b/web/client/app/common/header/header.html
@@ -10,7 +10,8 @@
       </md-button>
     </div>
     <div flex layout-fill layout-align="center center" layout="row">
-      <img class="md-card-image logo" alt="Proof of Feasibility" ng-src="{{vm.headerUrl}}">
+      <!--<img class="md-card-image logo" alt="Proof of Feasibility" ng-src="{{vm.headerUrl}}">-->
+      <span style="color:white;font-size: 30px;font-weight: bold;">VeriFleet</span>
     </div>
     <div flex></div>
   </div>
